--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -183,7 +183,7 @@ workflows:
           name: tests_ruby_3_3_rails_7_0_mysql
           rails_version: '~> 7.0.0'
           ruby_image: cimg/ruby:3.3.0-browsers
-          mysql_image: cimg/mysql:8-ram
+          mysql_image: cimg/mysql:8
           store_artefacts: true
           run_file_path: ./bin/tests_database_ci.sh
           post-steps:
