--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,7 @@ defaults: &defaults
       BUNDLE_RETRY: 3
       BUNDLE_PATH: ~/spree/vendor/bundle
       RAILS_VERSION: << parameters.rails_version >>
+      DB: postgres # default value, this will speed up bundle install for all postgres builds
   working_directory: ~/spree
   docker:
     - image: &ruby_image cimg/ruby:3.3.0-browsers
@@ -77,7 +78,6 @@ jobs:
         <<: *default_parameters
     environment:
       <<: *environment
-      DB: postgres
       DB_HOST: localhost
       DB_USERNAME: postgres
     docker:
